Added two ML apps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <ul>
       <li><a routerLink="/">Home Page</a></li>
      <!--Add a new routerLink to the list for new path for todo-list -->
-      <li><a routerLink="/todo-list" routerLinkActive="class2">Todo List</a></li>
+      <!-- <li><a routerLink="/todo-list" routerLinkActive="class2">Todo List</a></li>
       <li><a routerLink="/css-tricks" routerLinkActive="class2">CSS Tricks</a></li>
       <li><a routerLink="/control-flows" routerLinkActive="class2"> Control Flows</a></li>
-      <li><a routerLink="/deferred-loading" routerLinkActive="class2">Deferred Views</a></li>
+      <li><a routerLink="/deferred-loading" routerLinkActive="class2">Deferred Views</a></li> -->
       <!--<li><a routerLink="/singleton" routerLinkActive="class2">Singleton</a></li>
       <li><a routerLink="/prototype" routerLinkActive="class2">Prototype</a></li>
       <li><a routerLink="/facade" routerLinkActive="class2">Facade</a></li>
@@ -15,10 +15,12 @@
       <li><a routerLink="/logging" routerLinkActive="class2">Logging</a></li>
       <li><a routerLink="/state" routerLinkActive="class2">State</a></li>
       <li><a routerLink="/iterator" routerLinkActive="class2">Iterator</a></li>-->
-      <li><a routerLink="/ashieverse-art" routerLinkActive="class2">Art</a></li>
-      <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li>
+      <!-- <li><a routerLink="/ashieverse-art" routerLinkActive="class2">Art</a></li>
+      <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li> -->
       <!-- <li><a routerLink="/problem-statement" routerLinkActive="class2">Solution</a></li> -->
-      <li><a routerLink="/debug-tricks" routerLinkActive="class2">Debugging Tricks</a></li>
+      <!-- <li><a routerLink="/debug-tricks" routerLinkActive="class2">Debugging Tricks</a></li> -->
+      <li><a routerLink="/animal-classifier" routerLinkActive="class2">Image classifier</a></li>
+      <li><a routerLink="/sentiment-analysis" routerLinkActive="class2">Sentiment analysis</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
