--- a/src/app/animal-classifier/animal-classifier.component.scss
+++ b/src/app/animal-classifier/animal-classifier.component.scss
@@ -1,98 +1,74 @@
-.container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-  }
-
- 
-  
-  h1 {
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  input[type="file"] {
-    display: block;
-    margin: 20px auto;
-    padding: 10px;
-    border: 2px solid #ddd;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  input[type="file"]:hover {
-    border-color: #aaa;
-  }
-  
-  .preview {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    color: #555;
-    margin-top: 30px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  li {
-    background-color: #fff;
-    margin: 10px 0;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-size: 16px;
-    color: #333;
-  }
-
-  .glass-effect {
-    background: rgba(255, 255, 255, 0.2);  /* Transparent white */
-    border-radius: 15px;
-    padding: 20px;
-    backdrop-filter: blur(10px);  /* Glass effect */
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    display: inline-block;
-    margin-top: 20px;
-}
-
-
-
-.card {
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(255, 255, 255, 0.75);
-    border-radius: 12px;
-    border: 1px solid rgba(209, 213, 219, 0.3);
-}
-
-
 .panel {
-  max-width: 1200px;
-  min-height: 91vh;
+  min-height: 90vh;
   margin: 0 auto;
   padding: 20px;
   text-align: center;
-  font-family: Arial, sans-serif;
-  
+  font-family: Arial, sans-serif;    
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1124&q=100');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+}
+
+h1 {
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+input[type="file"] {
+  display: block;
+  color:#ffffff;
+  margin: 20px auto;
+  padding: 10px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="file"]:hover {
+  border-color: #aaa;
+}
+
+.preview {
+  max-width: 95%;
+  height: 325px;
+  margin-top: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+  color: #ffffff;
+  margin-top: 25px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  background-color: #fff;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 15px;
+  color: darkslategray;
+  font-weight: bold;
+}
+
+.glass-effect {
+  background: rgba(255, 255, 255, 0.2);  /* Transparent white */
+  border-radius: 15px;
+  padding: 20px;
+  backdrop-filter: blur(10px);  /* Glass effect */
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  display: inline-block;
+  width: 40%;
+  margin-top: 5px;
 }
