--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
-.container {
-  max-width: 1100px;
-  margin: 0 auto 100px;
-}
+// .container {
+//   max-width: 1100px;
+//   margin: 0 auto 100px;
+// }
 
 @media (max-width: 500px) {
   .container {
@@ -69,6 +69,6 @@ a:hover {
   color: #47d1ef;
 }
 .tech-fest {
-  max-width: 100%;
+  width: 100%;
 }
 
