--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,10 @@
       <li><a routerLink="/apple-pie-recipe" routerLinkActive="class2">Receipe</a></li> -->
       <!-- <li><a routerLink="/problem-statement" routerLinkActive="class2">Solution</a></li> -->
       <!-- <li><a routerLink="/debug-tricks" routerLinkActive="class2">Debugging Tricks</a></li> -->
-      <li><a routerLink="/animal-classifier" routerLinkActive="class2">Image classifier</a></li>
-      <li><a routerLink="/sentiment-analysis" routerLinkActive="class2">Sentiment analysis</a></li>
+      <!-- <li><a routerLink="/animal-classifier" routerLinkActive="class2">Image classifier</a></li>
+      <li><a routerLink="/sentiment-analysis" routerLinkActive="class2">Sentiment analysis</a></li> -->
+      <li><a routerLink="/html-binding" routerLinkActive="class2">HTML binding</a></li>
+      <li><a routerLink="/bypass-security" routerLinkActive="class2">Bypass Security</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
