--- a/src/app/inner-html-binding-component/inner-html-binding-component.component.html
+++ b/src/app/inner-html-binding-component/inner-html-binding-component.component.html
@@ -1,2 +1,5 @@
-<p>Bound value:</p>
-<p class="e2e-inner-html-interpolated">{{htmlSnippet}}</p>
+<div class="html-binding-section">
+    <h4>Bound value:</h4>
+    <p class="e2e-interpolated">{{htmlSnippet}}</p>
+</div>
+
