--- a/src/app/bypass-security-component/bypass-security-component.component.html
+++ b/src/app/bypass-security-component/bypass-security-component.component.html
@@ -1,3 +1,5 @@
-<h4>An untrusted URL:</h4>
-<p><a class="e2e-dangerous-url" [href]="dangerousUrl">Click me</a></p>
-<h4>A trusted URL:</h4>
+<div class="bypass-security-section">
+    <h4>An untrusted URL:</h4>
+    <p><a class="e2e-dangerous-url" [href]="dangerousUrl">Click me</a></p>
+    <h4>A trusted URL:</h4>
+</div>
