--- a/src/app/inner-html-binding-component/inner-html-binding-component.component.html
+++ b/src/app/inner-html-binding-component/inner-html-binding-component.component.html
@@ -1,5 +1,6 @@
-<h3>Binding innerHTML</h3>
-<p>Bound value:</p>
-<p class="e2e-inner-html-interpolated">{{htmlSnippet}}</p>
-<p>Result of binding to innerHTML:</p>
-<p class="e2e-inner-html-bound" [innerHTML]="htmlSnippet"></p>
+<div class="html-binding-section">
+    <h4>Bound value:</h4>
+    <p class="e2e-inner-html-interpolated">{{htmlSnippet}}</p>
+    <h4>Result of binding to innerHTML:</h4>
+    <p class="e2e-inner-html-bound" [innerHTML]="htmlSnippet"></p>
+</div>
