--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
   </nav>
   <router-outlet></router-outlet>
   @if (isRouterLinkEqualTo('/')) {
-    <img src="assets/homepage.jpg" alt="" class="tech-fest">
+    <!--<img src="assets/homepage.jpg" alt="" class="tech-fest"> -->
   }
   <app-video-chat-app></app-video-chat-app>
 
