start web cam code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,8 @@
   @if (isRouterLinkEqualTo('/')) {
     <!--<img src="assets/homepage.jpg" alt="" class="tech-fest"> -->
   }
-  <app-video-chat-app></app-video-chat-app>
-
+<!--  <app-video-chat-app></app-video-chat-app>-->
+  <app-webrtc-tasks></app-webrtc-tasks>
 </div>
 
 
