screen share code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,8 @@
     <!--<img src="assets/homepage.jpg" alt="" class="tech-fest"> -->
   }
 <!--  <app-video-chat-app></app-video-chat-app>-->
-  <app-webrtc-tasks></app-webrtc-tasks>
+<!--  <app-webrtc-tasks></app-webrtc-tasks>-->
+  <app-screen-share></app-screen-share>
 </div>
 
 
