--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
   }
 <!--  <app-video-chat-app></app-video-chat-app>-->
 <!--  <app-webrtc-tasks></app-webrtc-tasks>-->
-  <app-screen-share></app-screen-share>
+  <app-pwa></app-pwa>
 </div>
 
 
