--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
       <li><a routerLink="/sentiment-analysis" routerLinkActive="class2">Sentiment analysis</a></li> -->
       <li><a routerLink="/html-binding" routerLinkActive="class2">HTML binding</a></li>
       <li><a routerLink="/bypass-security" routerLinkActive="class2">Bypass Security</a></li>
+      <li><a routerLink="/pwa" routerLinkActive="class2">PWA</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
