--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,13 @@
     </ul>
   </nav>
   <router-outlet></router-outlet>
-  @if (isRouterLinkEqualTo('/')) {
-    <!--<img src="assets/homepage.jpg" alt="" class="tech-fest"> -->
-  }
-<!--  <app-video-chat-app></app-video-chat-app>-->
-<!--  <app-webrtc-tasks></app-webrtc-tasks>-->
-  <app-screen-share></app-screen-share>
+<!--  @if (isRouterLinkEqualTo('/')) {-->
+<!--    &lt;!&ndash;<img src="assets/homepage.jpg" alt="" class="tech-fest"> &ndash;&gt;-->
+<!--  }-->
+<!--&lt;!&ndash;  <app-video-chat-app></app-video-chat-app>&ndash;&gt;-->
+<!--&lt;!&ndash;  <app-webrtc-tasks></app-webrtc-tasks>&ndash;&gt;-->
+<!--  <app-screen-share></app-screen-share>-->
+  <app-pwa></app-pwa>
 </div>
 
 
