--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li><a routerLink="/">Home Page</a></li>
-     <!--Add a new routerLink to the list for new path for todo-list -->
+      <!--Add a new routerLink to the list for new path for todo-list -->
       <!-- <li><a routerLink="/todo-list" routerLinkActive="class2">Todo List</a></li>
       <li><a routerLink="/css-tricks" routerLinkActive="class2">CSS Tricks</a></li>
       <li><a routerLink="/control-flows" routerLinkActive="class2"> Control Flows</a></li>
@@ -21,18 +21,16 @@
       <!-- <li><a routerLink="/debug-tricks" routerLinkActive="class2">Debugging Tricks</a></li> -->
       <!-- <li><a routerLink="/animal-classifier" routerLinkActive="class2">Image classifier</a></li>
       <li><a routerLink="/sentiment-analysis" routerLinkActive="class2">Sentiment analysis</a></li> -->
-      <li><a routerLink="/html-binding" routerLinkActive="class2">HTML binding</a></li>
-      <li><a routerLink="/bypass-security" routerLinkActive="class2">Bypass Security</a></li>
-      <li><a routerLink="/pwa" routerLinkActive="class2">PWA</a></li>
+      <!--      <li><a routerLink="/html-binding" routerLinkActive="class2">HTML binding</a></li>-->
+      <!--      <li><a routerLink="/bypass-security" routerLinkActive="class2">Bypass Security</a></li>-->
     </ul>
   </nav>
   <router-outlet></router-outlet>
-  @if (isRouterLinkEqualTo('/')) {
-    <!--<img src="assets/homepage.jpg" alt="" class="tech-fest"> -->
-  }
-<!--  <app-video-chat-app></app-video-chat-app>-->
-<!--  <app-webrtc-tasks></app-webrtc-tasks>-->
-  <!-- <app-pwa></app-pwa> -->
+  <!--  @if (isRouterLinkEqualTo('/')) {-->
+  <!--    &lt;!&ndash;<img src="assets/homepage.jpg" alt="" class="tech-fest"> &ndash;&gt;-->
+  <!--  }-->
+  <!--&lt;!&ndash;  <app-video-chat-app></app-video-chat-app>&ndash;&gt;-->
+  <!--&lt;!&ndash;  <app-webrtc-tasks></app-webrtc-tasks>&ndash;&gt;-->
+  <!--  <app-screen-share></app-screen-share>-->
+  <app-pwa></app-pwa>
 </div>
-
-
